Done with HTML and CSS

--- a/sign-in.html
+++ b/sign-in.html
@@ -1,33 +1,27 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Sign In Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <header>
-
-    </header>
-
-    <br>
-    <h1>Log in as a Supervisor or Introducer</h1>
-
     <div class="login">
         <form>
+            <h1>Sign In</h1>
+            <br>
+            <input type="email" name="email" placeholder="username or email">
             <br><br>
-            <input type="email" name="email" placeholder="Email">
-            <input type="password" name="pass" placeholder="Password"><br><br><br><br><b></b>
-            <a href=""><input type="button" value="Log In"></a><br><br><br><br><br><br><br><br><br><br> Don't have an account?<a href="signup.html">&nbsp;Sign Up</a>
+            <input type="password" name="pass" placeholder="password">
+            <br><br>
+            <input type="button" value="Sign In">
+            <br><br>
+
+            <p>Or login with</p>
+            
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-google"></a>            
+            <br><br><br><br><br>
+            <a>Sign Up</a>
         </form>
     </div>
-
-    <footer>
-        <b>Codex @ 2020 - PesewaOne</b>
-    </footer>
 </body>
 
 </html>
