--- a/sign-in.html
+++ b/sign-in.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign In</title>  
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -7,15 +14,15 @@
         <form>
             <h1>Sign In</h1>
             <br>
-            <input type="email" name="email" placeholder="username or email">
+            <input type="email" name="email" placeholder="username or email" required>
             <br><br>
-            <input type="password" name="pass" placeholder="password">
+            <input type="password" name="pass" placeholder="password" required>
             <br><br>
             <input type="button" value="Sign In">
             <br><br>
 
             <p>Or login with</p>
-            
+
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-google"></a>            
             <br><br><br><br><br>
